[Blast] [Decorator] [Menu] Fix menu icons alignment

--- a/src/Blast/Bundle/DecoratorBundle/Resources/public/css/skin-blue.css
+++ b/src/Blast/Bundle/DecoratorBundle/Resources/public/css/skin-blue.css
@@ -431,3 +431,10 @@ section.content {
 .skin-blue .table .table {
     margin-bottom: 0;
 }
+
+.skin-blue .sidebar-menu .treeview-menu > li > a > .fa,
+.skin-blue .sidebar-menu .treeview-menu > li > a > .glyphicon,
+.skin-blue .sidebar-menu .treeview-menu > li > a > .ion {
+   text-align: center;
+   margin-right:3px;
+}
